--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 arrow = { version = "53.2.0", features = ["prettyprint"] }
 arrow-schema = "53.2.0"
 dashmap = "6.1.0"
+datafusion = "42.1.0"
 serde = { version = "1.0.213", features = ["derive"] }
 thiserror = "1.0.65"
