--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ dashmap = "6.1.0"
 datafusion = "42.1.0"
 serde = { version = "1.0.213", features = ["derive"] }
 thiserror = "1.0.65"
+tokio = "1.41.0"
