--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ arrow = { version = "53.2.0", features = ["prettyprint"] }
 arrow-schema = "53.2.0"
 dashmap = "6.1.0"
 datafusion = "42.1.0"
-serde = { version = "1.0.213", features = ["derive"] }
-thiserror = "1.0.65"
-tokio = "1.41.0"
+futures = "0.3.31"
+parquet = { version = "53.2.0", features = ["async"] }
+serde = { version = "1.0.214", features = ["derive"] }
+thiserror = "1.0.66"
+tokio = { version = "1.41.0", features = ["fs", "io-util"] }
+
