--- a/arrow-db-client/Cargo.toml
+++ b/arrow-db-client/Cargo.toml
@@ -7,8 +7,12 @@ edition = "2021"
 arrow = { version = "53.2.0", features = ["prettyprint"] }
 arrow-flight = "53.2.0"
 arrow-schema = "53.2.0"
+clap = { version = "4.5.23", features = ["derive"] }
 datafusion = "42.1.0"
 serde = { version = "1.0.214", features = ["derive"] }
 thiserror = "1.0.66"
 tokio = { version = "1.41.0", features = ["rt-multi-thread", "parking_lot"] }
 tonic = "0.12.3"
+
+[[example]]
+name = "basic"
