--- a/arrow-db-wasm/Cargo.toml
+++ b/arrow-db-wasm/Cargo.toml
@@ -15,8 +15,8 @@ arrow-db-core = { path = "../arrow-db-core", features = ["wasm"] }
 bytes = "1.8.0"
 chrono = { version = "0.4", features = ["wasmbind"] }
 serde-wasm-bindgen = "0.6.5"
-wasm-bindgen = "0.2.84"
-wasm-bindgen-futures = "0.4.40"
+wasm-bindgen = "0.2.104"
+wasm-bindgen-futures = "0.4.43"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
@@ -28,4 +28,9 @@ serde = { version = "1.0.214", default-features = false, features = ["derive"] }
 
 
 [dev-dependencies]
-wasm-bindgen-test = "0.3.34"
+wasm-bindgen-test = "0.3.43"
+
+[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
+debug-js-glue = true
+demangle-name-section = true
+dwarf-debug-info = false
